# vpok

./: .gitignore  README.md  pyproject.toml  requirements-build.txt  requirements.txt  run.py  videopoker.spec
.github/workflows/: build.yml
docs/: poker.txt
scripts/: cli_demo.py  make_icon.py
src/videopoker/: __init__.py  config.py
src/videopoker/domain/: card.py  deck.py  evaluator.py  hand.py  hand_rank.py  paytable.py
src/videopoker/domain/rules/: extra.py
src/videopoker/game/: session.py  state.py
src/videopoker/ui/: app.py  assets.py  keybindings.py  settings_scene.py  sound.py  table_scene.py  theme.py
src/videopoker/ui/widgets/: button.py  card_view.py  panel.py  paytable_view.py  suit_drawer.py
tests/: test_card.py  test_deck.py  test_double.py  test_evaluator.py  test_paytable.py  test_state_machine.py
